--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="brand-heading text-center" id="glow-org">RUBO the Scavenger</h1>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NOS_x5yHYQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <p class="intro-text" style="font-family: 'Audiowide', sans-serif;">Do robots dream of power core?</p>
+                        <h1 class="brand-heading text-center" id="glow-org">RUBO</h1>
+                        <h1 class="brand-heading text-center" id="glow-org" style="font-size: 40px; padding-bottom: 20px;">The Space Scavenger</h1>
+                        <iframe width="600" height="300" src="https://www.youtube.com/embed/rtPVNwAMaKM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -74,6 +75,7 @@
                 <p>In a galaxy far far away</p>
                 <p>Rubo is a scavenger bot roaming in the space trying to find a power core replacement for its spaceship</p>
                 <p>While it discovers an abandoned spacestation, there are something waiting for it inside.</p>
+                <p>What could that be.......?</p>
             </div>
         </div>
     </section>
@@ -84,7 +86,7 @@
             <div class="container">
                 <div class="col-lg-12">
                     <h2>art gallery of rubo</h2>
-                    <a href="./Gallery.html" class="btn btn-default btn-lg" target="_blank" rel="noopener noreferrer">Visit gallery Page</a>
+                    <a href="./Gallery Opening.html" class="btn btn-default btn-lg" target="_blank" rel="noopener noreferrer">Visit gallery Page</a>
                 </div>
             </div>
         </div>
@@ -115,7 +117,7 @@
 
     <footer>
         <div class="container text-center">
-            <p id="">Copyright © Cheng Zhang 2023</p>
+            <p style="font-size: 15px;">Cheng Zhang 4/20/2023</p>
         </div>
     </footer>
 
